[package]
name = "paper-utils"
version = "1.2.5"
edition = "2024"
license = "AGPL-3.0"
description = "A utility crate for PaperCache."
repository = "https://github.com/PaperCache/paper-utils.git"
readme = "README.md"
homepage = "https://papercache.io"
keywords = ["caching", "PaperCache"]
categories = ["caching"]

[dependencies]
byteorder = "1.5.0"
smallvec = "1.15.1"
thiserror = "2.0.12"
